--- a/interest.html
+++ b/interest.html
@@ -28,15 +28,7 @@
 Games khelna<br>
 Badminton khelna<br>
 Dosto ke sath bakchodi karna<br>
-Aur lastly kuchh porn stars jaise:
-<ul>
-    <li>Dani Daniels</li>
-    <li>Sophia Leone</li>
-    <li>Elsa jean</li>
-    <li>Keisha Grey</li>
-    <li>Alison Tylor</li>
-    <li></li>
-</ul><br>
+Aur yaad nahi.
 </div>
 
 
