active tabs added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     My portfolio
     </div>
 <div class="nav">   
-<a class="menu" href="index.html">Home</a>
+<a class="active" href="index.html">Home</a>
 <a class="menu" href="education.html">Education</a>
 <a class="menu" href="images.html">Sketches</a>
 <a class="menu" href="interest.html">Interests</a>
