--- a/interest.html
+++ b/interest.html
@@ -17,7 +17,7 @@
 <a class="menu" href="index.html">Home</a>
 <a class="menu" href="education.html">Education</a>
 <a class="menu" href="images.html">Sketches</a>
-<a class="menu" href="interest.html">Interests</a>
+<a class="active" href="interest.html">Interests</a>
 <a class="menu" href="contact.html">Contact</a>
 
 </div>
