--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <a class="menu" href="education.html">Education</a>
 <a class="menu" href="images.html">Sketches</a>
 <a class="menu" href="interest.html">Interests</a>
-<a class="menu" href="contact.html">Contact</a>
+<a class="active" href="contact.html">Contact</a>
 
 </div>
 
@@ -27,6 +27,11 @@
     My facebook profile: <a href="https://www.facebook.com/nitishk1005" target="_blank">Click here</a><br>
     My instagram profile: <a href="https://www.instagram.com/nitish.bpns/" target="_blank">Click here</a><br>
     My github profile: <a href="https://github.com/nitish-bpns" target="_blank">Click here</a><br>
+    My linkedin profile: <a href="https://www.linkedin.com/in/nitish-bpns/" target="_blank">Click here</a><br>
+    My twitter profile: <a href="https://twitter.com/nitish_bpns" target="_blank">Click here</a><br>
+    My quora profile: <a href="https://www.quora.com/profile/Nitish-Kumar-Singh-247" target="_blank">Click here</a><br>
+
+
     </div>
 
 
