--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
     </div>
 <div class="nav">   
 <a class="menu" href="index.html">Home</a>
-<a class="menu" href="education.html">Education</a>
+<a class="active" href="education.html">Education</a>
 <a class="menu" href="images.html">Sketches</a>
 <a class="menu" href="interest.html">Interests</a>
 <a class="menu" href="contact.html">Contact</a>
