--- a/images.html
+++ b/images.html
@@ -16,7 +16,7 @@
 <div class="nav">   
 <a class="menu" href="index.html">Home</a>
 <a class="menu" href="education.html">Education</a>
-<a class="menu" href="images.html">Sketches</a>
+<a class="active" href="images.html">Sketches</a>
 <a class="menu" href="interest.html">Interests</a>
 <a class="menu" href="contact.html">Contact</a>
 
